Try to keep window.arguments from being wiped out by scope-clearing by setting the document in the window to null before setting window.arguments in AttachArguments.  Bug 25040, r=danm, sr=jst